# versionamento_poetry

./: README.md  clean  pyproject.toml
notebooks/: notebook.ipynb  project_ds.ipynb
