[tool.poetry]
name = "versionamento-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.3.3"
ipykernel = "^7.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
